--- a/style.css
+++ b/style.css
@@ -224,4 +224,18 @@ footer {
   flex: 1;
   min-width: 280px;
 
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex !important;
+  gap: 24px;
+}
+
+nav li {
+  margin: 0;
+  padding: 0;
+}
+
+
 }
