--- a/project.css
+++ b/project.css
@@ -1,1 +1,34 @@
+#main-nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 24px;
+  align-items: center;
+}
+
+#main-nav li {
+  margin: 0;
+  padding: 0;
+}
+
+#main-nav a {
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+}
+
+#main-nav a.active-link {
+  text-decoration: underline;
+}
+
+
+iframe {
+  display: block;
+  margin: 20px 0;
+}
+
+h1, h2, p {
+  max-width: 800px;
+}
 
