--- a/style.css
+++ b/style.css
@@ -240,8 +240,7 @@ nav li {
 
 }
 #circuit3D canvas{
-  width: 50vw !important;
-  height: 50vw !important;
-  position: absolute;
-  top: 0;
-  left: 0;
+  width: 100%
+  height: 400px;
+  position: relative;
+}
