--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ footer {
   color: #000000;
   box-shadow: 0 0 20px #ffff00;
   border-color: #ffff00;
-
+}
 .sketch-row{
   display: flex;
   gap: 30px;
@@ -223,7 +223,7 @@ footer {
 .sketch-description{
   flex: 1;
   min-width: 280px;
-
+}
 nav ul {
   list-style: none;
   margin: 0;
@@ -240,7 +240,7 @@ nav li {
 
 }
 #circuit3D canvas{
-  width: 100%
+  width: 100%;
   height: 400px;
   position: relative;
 }
