--- a/style.css
+++ b/style.css
@@ -244,3 +244,88 @@ nav li {
   height: 400px;
   position: relative;
 }
+#circuit-hub{
+  position: relative;
+  width: 100%;
+  height: 700px;
+  height: 700px;
+  margin: 0 auto;
+}
+
+#circuit3D{
+  position: absolute;
+  top:50%;
+  left:50%;
+  width:420px;
+  height:420px;
+  transform: translate(-50%,-50%);
+  z-index: 2;
+}
+.circuit-link{
+  position:absolute;
+  font-family: "Courier New", monospace;
+  font-size: 0.9rem;
+  color: #39ff14;
+  text-decoration: none;
+  letter-spacing: 0.12em;
+  padding: 4px 10px;
+  text-shadow: 0 0 6px #39ff14;
+}
+.circuit-link::before{
+  content:"";
+  position: absolute;
+  background:#39ff14;
+  box-shadow: 0 0 8px #39ff14;
+}
+  .circuit-link.left{
+    left: 0;
+  }
+.circuit-link.left::before{
+  right: -60px;
+  top: 50%;
+  width:60px;
+  height: 2px;
+}
+
+.circuit-link.right{
+  right: 0;
+  text-align: right;
+}
+.circuit-link.right::before{
+  left: 60px;
+  top:50%;
+  width: 60px;
+  height:2px;
+}
+.circuit-link.top{
+  top:0;
+  left:50%;
+  transform: translateX(-50%);
+}
+.circuit.link.top::before{
+  left:50%;
+  top:100%;
+  width:2px;
+  height:60px;
+}
+.circuit-link.bottom{
+  bottom:0;
+  left:50%;
+  transform: translateX(-50%);
+}
+.circuit-link.bottom::before{
+  left:50%;
+  bottom:100%;
+  width:2px;
+  height:60px;
+}
+
+.circuit-link:hover{
+  color:#ffff00;
+  text-shadow: 0 0 12px #ffff00;
+}
+.circuit-link:hover::before{
+  background: #ffff00;
+  box-shadow: 0 0 16px #ffff00;
+}
+  
