--- a/style.css
+++ b/style.css
@@ -175,41 +175,6 @@ footer {
 
 }
 
-
-.project-buttons {
-
-  display: flex;
-  flex-direction: column;  
-  gap: 18px;
-  margin-top: 30px;
-  max-width: 520px;   
-
-}
-
-.project-btn {
-
-  display: block;
-  width: 100%;
-  text-decoration: none;
-  color: #39ff14;
-  border: 2px solid #39ff14;
-  padding: 15px 22px;
-  border-radius: 6px;
-  font-weight: bold;
-  background-color: transparent;
-  text-align: center;
-  transition: all 0.25s ease;
-  box-shadow: 0 0 8px #39ff14;
-
-}
-
-.project-btn:hover {
-
-  background-color: #ffff00;
-  color: #000000;
-  box-shadow: 0 0 20px #ffff00;
-  border-color: #ffff00;
-}
 .sketch-row{
   display: flex;
   gap: 30px;
@@ -238,7 +203,7 @@ nav li {
 }
 
 
-}
+
 #circuit3D canvas{
   width: 100%;
   height: 400px;
@@ -302,7 +267,7 @@ nav li {
   left:50%;
   transform: translateX(-50%);
 }
-.circuit.link.top::before{
+.circuit-link.top::before{
   left:50%;
   top:100%;
   width:2px;
