--- a/style.css
+++ b/style.css
@@ -247,4 +247,18 @@ nav li {
   gap:40px;
   flex-wrap: nowrap;
 }
+#canvas-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+  margin: 20px auto;
+  width: fit-content;
+}
+
+#canvas1, #canvas2 {
+  width: 600px;
+  height: 600px;
+}
 
