--- a/style.css
+++ b/style.css
@@ -234,16 +234,16 @@ nav li {
   flex: 0 0 520px;
   height: 520px;
   max-width:520px;
-  margin-left: autp;
+  margin-left: auto;
   margin-right: auto;
   position: relative;
   overflow: hidden;
 }
 
 #circuit3D canvas{
-  width: 100%
-  height: 100%
- display: block
+  width: 100%;
+  height: 100%;
+ display: block;
 }
 
 .projects-layout{
@@ -252,7 +252,7 @@ nav li {
   gap:40px;
   flex-wrap: nowrap;
 }
-@media(max- width:900%){
+@media(max-width:900%){
   .projects-layout{
     flex-direction:column;
     align-items: center;
