--- a/style.css
+++ b/style.css
@@ -176,33 +176,7 @@ footer {
   box-shadow: 0 -2px 10px #ff6a00;
 
 }
-.project-buttons { 
-  display: flex; 
-  flex-direction: column;
-  gap: 18px; margin-top:  30px; 
-  max-width: 520px;
-}
-.project-btn { 
-  display: block;
-  width: 100%; 
-  text-decoration: none;
-  color: #39ff14; 
-  border: 2px solid #39ff14;
-  padding: 15px 22px; 
-  border-radius: 6px;
-  font-weight: bold; 
-  background-color: transparent; 
-  text-align: center;
-  transition: all 0.25s ease;
-  box-shadow: 0 0 8px #39ff14; 
-             
-             } 
-.project-btn:hover { 
-  background-color: #ffff00;
-  color: #000000;
-  box-shadow:0 0 20px #ffff00; 
-  border-color: #ffff00;
-}
+
 .sketch-row{
   display: flex;
   gap: 30px;
@@ -229,24 +203,35 @@ nav li {
   margin: 0;
   padding: 0;
 }
-
+.hub-area{
+  display: flex;
+  justify-content: center;
+  padding:60px 0;}
+  .hub{
+    position: relative;
+    width: 900px;
+    height: 520px;
+  }
 #circuit3D{
-  flex: 0 0 480px;
-  max-width: 300px;
+  position: absolute;
+  left: 50%;
+  top:50%;
+  width: 280px;
+  height:200px;
+  transform: translate(-50%, -50%);
+  overflow:hidden;
+  z-index:2;
+  
 }
+
+
 
 #circuit3D canvas{
-  width: 80%;
-  height: 400px;
-  position: relative;
+  width: 100%;
+  height: 100px;
+ display:block;
 }
 
-.projects-layout{
-  display: flex;
-  align-items: center;
-  gap:40px;
-  flex-wrap: nowrap;
-}
 #canvas-row {
   display: flex;
   flex-direction: row;
