--- a/style.css
+++ b/style.css
@@ -216,8 +216,8 @@ nav li {
   position: absolute;
   left: 50%;
   top:50%;
-  width: 480px;
-  height:360px;
+  width: 680px;
+  height:660px;
   transform: translate(-50%, -50%);
   overflow:hidden;
   z-index:2;
@@ -315,7 +315,7 @@ nav li {
 }
 
   .nav-line.right{
-    right:0;
+    right:-40px;
     top:50%;
     transform: translate(-50%);
     width:320px;
