--- a/physical.css
+++ b/physical.css
@@ -1,1 +1,91 @@
 
+//the following code is referenced from this youtube tutorial https://www.youtube.com/watch?v=w9OpXh3K6YI and modified to fit my design -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="wide=device-width, initial-scale=1.0/>
+      <title>Cool Physical Computation Deck!</title>
+
+<link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+ 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  <style>
+    *{ margin:0;
+      padding:0;
+      box-sizing: border-box;
+     }
+    body{
+      display: grid;
+      place-content: center;
+      min-height: 100vhl
+        width: 100vm;
+      background-color:#660033;
+      overflow: hidden;
+   font-family: sans-serif;
+    }
+    .container{
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    :root{
+      --timing: 400ms;
+      --rotation: 15deg;
+    }
+    .card{
+      perspective: 1000px;
+      width: 16rem;
+      height:24rem;
+    }
+    .card-inner{
+      position: relative;
+      transform-style: preserve-3d;
+      transition: transform var(--timing) easel
+        width:100%;
+      height:100%,
+        border-radius: 0.75rem;
+      overflow: hidden;
+      box-shadow: 0 20px 25px 25px -5px rgba( 0, 0,0,0.1),
+        0 10px 10px -5px rgba(0, 0, 0, 0.04);
+    }
+    .card:hover .card-inner{
+      transform: rotateX(var(--rotation));
+    }
+
+    .card-inner:: before{
+      content:"";
+      position: absolute;
+      inset: 0;
+      z-index: 100;
+      back
+      
+
+
+      
+    <style>
+      @keyframes shimmer{
+      }
+      </style>
+  </head>
+  <body>
+    <div class="container">
+
+
+      
+  </body>
+    </style>
+  </head>
+    <footer>
+        <p><small>2025 Yifan Eva Zhang. All rights reserved.</small></p>
+        <address>
+         <a href="mailto:yifanezhang@gmail.com">Contact Me</a><br>
+Social Media: <br>
+<a href="https://www.instagram.com/_ezzzart_" target="ext-links">Instagram</a><br>
+<a href="https://www.linkedin.com/in/yifan-zhang-72b241290/" target="ext-links">LinkedIn</a><br>
+        </address>
+  </footer>
+</html>
+
