--- a/physical.css
+++ b/physical.css
@@ -195,3 +195,14 @@ body {
     0 0 10px rgba(255,255,100,0.15);
 }
 
+footer {
+
+  background-color: #99004d;
+  color: #ffcce6;
+  text-align: center;
+  padding: 15px;
+  font-size: 0.9rem;
+  border-top: 2px solid #e60073;
+  box-shadow: 0 -2px 10px #1a000d;
+
+}
