--- a/physical.css
+++ b/physical.css
@@ -11,6 +11,72 @@
   --rotation: 15deg;
   --neonSoft: rgba(255, 255, 80, 0.35);
 }
+/* ===== HEADER / NAV ===== */
+
+#top-header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2000;
+  color: #39ff14;
+  font-family: "Bitcount Prop Single Ink", monospace;
+  background-color: #000000;
+  border-bottom: 2px solid #ff6a00;
+  box-shadow: 0 2px 12px #ff6a00;
+  flex-direction: column;
+}
+
+.header-top {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 20px;
+  color: #39ff14;
+  font-family: "Bitcount Prop Single Ink", monospace;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-shadow: 0 0 6px #39ff14;
+}
+
+#top-header nav {
+  width: 100%;
+  background-color: #000000;
+  box-shadow: 0 2px 10px #ff6a00;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#top-header nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  padding: 0;
+  margin: 0;
+}
+
+#top-header nav a {
+  text-decoration: none;
+  color: #ff6a00;
+  font-weight: bolder;
+  padding: 10px 15px;
+  transition: color 0.3s, text-shadow 0.3s;
+}
+
+#top-header nav a:hover {
+  color: #39ff14;
+  text-shadow: 0 0 8px #39ff14;
+}
+
+#main-nav a.active-link {
+  background-color: #39ff14;
+  color: #000000;
+  border-radius: 6px;
+  box-shadow: 0 0 12px #39ff14;
+}
 
 body {
   display: grid;
