--- a/physical.css
+++ b/physical.css
@@ -79,8 +79,7 @@
 }
 
 body {
-  display: grid;
-  place-content: center;
+  margin:0;
   min-height: 100vh;
   width: 100vw;
   background-color: #33001a;
@@ -93,7 +92,11 @@ body {
   flex-direction: column;
   align-items: center;
 }
-
+main.container{
+  max-width:1100px;
+  margin:40px auto;
+  padding:0 20px;
+}
 .deck-title {
   color: white;
   text-align: center;
