--- a/physical.css
+++ b/physical.css
@@ -108,8 +108,8 @@ main.container{
 
 
 .swiper {
-  width: 100%;
-  max-width: 420px;
+  width: 360px;
+  max-width: 100%;
 }
 
 .swiper-wrapper {
@@ -240,8 +240,7 @@ main.container{
 .swiper-slide {
   display:flex;
   justify-content: center;
-  width:360px;
-  height:460px;
+  
   
   opacity: 0.25;
   transition: opacity 0.3s ease, transform 0.3s ease;
@@ -257,14 +256,7 @@ main.container{
   opacity: 1;
 }
 
-  .swiper-slide:not(.swiper-slide-active) .card-surface {
-  filter: blur(1px);
-}
-.swiper-slide:not(.swiper-slide-active) .card-surface {
-  box-shadow:
-    0 12px 25px rgba(0,0,0,0.4),
-    0 0 10px rgba(255,255,100,0.15);
-}
+
 
 footer {
 
