--- a/physical.css
+++ b/physical.css
@@ -81,7 +81,7 @@
 body {
   margin:0;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: #33001a;
   overflow-x:hidden;
   overflow-y:auto;
@@ -98,6 +98,14 @@ main.container{
   margin:40px auto;
   padding:0 20px;
 }
+.deck{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 .deck-title {
   color: white;
   text-align: center;
@@ -110,6 +118,7 @@ main.container{
 .swiper {
   width: 360px;
   max-width: 100%;
+  margin:0 auto;
 }
 
 .swiper-wrapper {
@@ -277,5 +286,11 @@ body.physical-page main {
   margin: 0;
   padding: 40px 20px;
 }
+@media (min-width: 900px){
+  main.container{
+    margin: 24px auto;
+  }
+}
+
 
 
