--- a/software.css
+++ b/software.css
@@ -82,7 +82,7 @@ body {
   margin:0;
   min-height: 100vh;
   width: 100%;
-  background-color: #4d004d;
+  background-color: #330066;
   overflow-x:hidden;
   overflow-y:auto;
   font-family: "Bricolage Grotesque", sans-serif;
@@ -269,8 +269,8 @@ main.container{
 
 footer {
 
-  background-color: #99004d;
-  color: #ffcce6;
+  background-color: #a64dff;
+  color: #a64dff;
   text-align: center;
   padding: 15px;
   font-size: 0.9rem;
