--- a/software.css
+++ b/software.css
@@ -270,7 +270,7 @@ main.container{
 footer {
 
   background-color: #a64dff;
-  color: #a64dff;
+  color: #001a00;
   text-align: center;
   padding: 15px;
   font-size: 0.9rem;
