--- a/visual.css
+++ b/visual.css
@@ -1,4 +1,4 @@
-/* reference-based on https://www.youtube.com/watch?v=w9OpXh3K6YI and edited to fit my elements  */
+/* reference-based on https://www.youtube.com/watch?v=w9OpXh3K6YI and edited to fit my elements with https://www.w3schools.com/html/html_blocks.asp and https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/backdrop-filter  */
 @import url('https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single+Ink:wght@100..900&display=swap');
 * {
   margin: 0;
